spacing issues on button & tag

--- a/public/assets/scss/mixins.scss
+++ b/public/assets/scss/mixins.scss
@@ -27,7 +27,7 @@
   margin-top: 0;
   margin-bottom: 0;
   width: fit-content;
-  line-height: 160%;
+  line-height: 21px;
   padding: 6px 10px;
   border-radius: 4px;
   text-align: center;
