--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -50,7 +50,7 @@ img {
   text-transform: uppercase;
   width: 100%;
   background-color: $primaryRed;
-  padding: 10px 20px;
+  padding: 11px 20px 9px 20px;
   letter-spacing: 2px;
   cursor: pointer;
   line-height: 160%;
